1998-04-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtools.h: Declare new function initSwarmArguments.

	* simtools.m (initSwarmArguments): New function. 
	(initSwarm): Call initSwarmArguments with NULL.

1998-03-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtools.m: Don't define arguments here (now in objectbase).

	* Makefile (HEADERS): Remove global.h.
	(simtools.o): Remove global.h as a dependency.

	* Archiver.m: Don't include simtools/global.h.
	(global.h): Removed.

1998-02-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* NSelect.m:  Include random.h.

	* simtools.m: Don't include time.h or string.h.  Don't define
	probeDisplayManager.  Include simtoolsgui.h.
	(initSwarm): Don't call GUI_INIT, instead call initSimtoolsGUI if
	swarmGUIMode.
	(buildWindowGeometryRecordName, _createProbeDisplay,
	_createCompleteProbeDisplay, getKeyForName,
	createArchivedProbeDisplayNamed,
	createArchivedCompleteProbeDisplayNamed): Remove (moved to
	simtoolsgui.m).

	* simtools.h: Remove ControlPanel, WindowGeometryRecordName,
	CompositeWindowGeometryRecordName, ActioonCache, ProbeDisplay,
	CompleteProbeDisplay, ProbeDisplayManager, GUIComposite, GUISwarm,
	ActiveGraph protocols (moved to simtoolsgui).  Remove declaration
	of probeDisplayManager.  Remove mention of @classes ActionCache,
	ProbeDisplay, CompleteProbeDisplay, ProbeDisplayManager, GUISwarm,
	and ActiveGraph.  Don't include GUISwarm.h.

	* global.h: Remove includes of ProbeDisplayManager.h,
	SwarmObject.h. and random.h.  Remove declaration of
	probeDisplayManager and initSwarm.
	
	* NSelect.m: Include random.h. 

	* Makefile: Removed classes below.

	* ActionCache.[hm], ActionHolder.[hm], ActiveGraph.[hm],
	ClassDisplayWidget.[hm], CommonProbeDisplay.[hm],
	CompleteProbeDisplay.[hm], ControlPanel.[hm], GUIComposite.[hm],
	GUISwarm.[hm], MessageProbeWidget.[hm], ProbeDisplay.[hm],
	ProbeDisplayManager.[hm], SimpleProbeDisplay.[hm],
	VarProbeWidget.[hm], simtools.[hm], global.h: Removed (moved to