@@ -7,15 +7,22 @@
 #import <simtools/OutFile.h>
 #import <activity.h>
 
-// ActiveGraph: an object that actively updates its file stream when updated
+//S: An object that actively updates its file stream when updated.
+
+//D: This is the file I/O equivalent of ActiveGraph: it takes an OutFile 
+//D: object, a target (datafeed) object, and a selector, which it uses to
+//D: extract data from the object and send it to the file. 
 @implementation ActiveOutFile
 
+//M: The setFileObject: method sets the file object to which the data will be
+//M: sent.
 - setFileObject: aFileObj
 {
   theFile = aFileObj;
   return self;
 }
 
+//M: The setDataFeed: method sets the object that will be probed for data.
 - setDataFeed: d
 {
   dataFeed = d;
@@ -31,7 +38,8 @@
   return self;
 }
 
-// add a new entry...
+//M: The step method fires the probe, reads the value from the object, and 
+//M: sends the value to the file.
 - step
 {
   [theFile putDouble: [self doubleDynamicCallOn: dataFeed]];
