@@ -8,6 +8,11 @@
 #import <simtools/ObjectSaver.h>
 #import <simtools/OutFile.h>
 
+//S: A class to save an object's instance variables to a file.
+//D: This class is used to write an object's variables to a specified file. 
+//D: If only a subset of the variables should be written out, the set is 
+//D: specified by a template ProbeMap (where the ProbeMap will contain Probes 
+//D: for those variables which should be saved). 
 @implementation ObjectSaver
 
 +createBegin: aZone {
@@ -23,6 +28,8 @@
   return anObj ;
 }
 
+//M: The save:to: method saves the entire target object without actually 
+//M: returning an instance of ObjectSaver to the user.
 +save: anObject to: aFileObject {
   id anObj ;
 
@@ -33,6 +40,9 @@
   return self ;
 }
 
+//M: The save:to:withTemplate: method saves the subset of target object 
+//M: variables specified in a template from anObject without actually 
+//M: returning an instance of ObjectSaver to the user.
 +save: anObject to: aFileObject withTemplate: aProbeMap{
   id anObj ;
 
@@ -44,6 +54,8 @@
   return self ;
 }
 
+//M: The save:toFileNamed: method saves the entire target object to the file
+//M: aFileName.
 +save: anObject toFileNamed: (const char *)aFileName
  {
   id anObj ;
@@ -63,6 +75,9 @@
   return self ;
 }
 
+//M: The save:toFileNamed:withTemplate: method saves the subset of variables
+//M: specified in a template from the target object to the file
+//M: aFileName.
 +save: anObject toFileNamed: (const char *)aFileName withTemplate: aProbeMap
 {
   id anObj ;
@@ -103,11 +118,15 @@
   exit(-1) ;
 }
 
+//M: The setFileObject: method sets the target fileObject which the instance 
+//M: of the ObjectSaver class should use.
 -setFileObject: aFileObject {
   theFileObject = aFileObject ;
   return self ;
 }
 
+//M: The saveObject: message tells an instance of the ObjectSaver class to 
+//M: save the state of the target object into the requested file.
 - saveObject: anObject
 {
   id aProbeMap, aProbe, anIndex ;
@@ -141,6 +160,9 @@
   return self ;  
 }
 
+//M: The setTemplateProbeMap: method is used to specify which variables of the
+//M: source object(s) should be saved by the ObjectSaver instance to which this
+//M: message was sent.
 -setTemplateProbeMap: aProbeMap {
 
   templateProbeMap = aProbeMap ;
